--- a/style.css
+++ b/style.css
@@ -9,43 +9,115 @@ body, html {
 	position: relative;
 }
 
-.console {
+/*.console {*/
+/*	z-index: 200;*/
 	/*background-color: green;*/
-	position: absolute;
+/*	position: absolute;*/
+/*	margin: auto !important;*/
+/*     top: 0;*/
+/*     right: 0;*/
+/*     bottom: 0;*/
+/*     left: 0;*/
+	/*top: 10%;*/
+/*	width: 50%;*/
+/*	height: 50%;*/
+	/*left: 20%;*/
+/*	z-index: 999;*/
+/*	cursor: move;*/
+/*	border-WIDTH: 7;*/
+/*    border-style: ridge;*/
+/*    border-color: #FF00FF;*/
+/*    filter: progid:DXImageTransform.Microsoft.Shadow(color=yellow, direction=135, strength=14);*/
+/*    box-shadow: 9px 9px 14px yellow;*/
+	
+/*}*/
+
+
+
+.embed {
+	/*z-index: 200;*/
+	/*position: absolute;*/
+  width: 100%;
+  height: 200%;
+max-width: 560px;
+  
+
+
+}
+
+.aspect-ratio {
 	margin: auto !important;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
-	/*top: 10%;*/
-	width: 50%;
-	height: 70%;
-	/*left: 20%;*/
-	z-index: 999;
-	cursor: move;
-	border-WIDTH: 7;
+  position: absolute;
+  width: 35%;
+  height: 35%;
+
+border-WIDTH: 7;
     border-style: ridge;
     border-color: #FF00FF;
     filter: progid:DXImageTransform.Microsoft.Shadow(color=yellow, direction=135, strength=14);
     box-shadow: 9px 9px 14px yellow;
-	
+    
+    
 }
-.video-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 0px;
-    height: 0;
-    overflow: hidden;
-}
+.aspect-ratio embed {
+	z-index: 500;
+  position: relative;
 
-.video-container iframe,
-.video-container object,
-.video-container embed {
-    position: absolute;
     top: 0;
     left: 0;
+  width: 100%;
+  height: 100%;
+   overflow: hidden;
+   
+  /*left: 0; top: 0;*/
+}
+
+.emailbox {
+	/*border: 1px solid red;*/
+	width: 80px;
+	height: 70px;
+	z-index: 200;
+	background-size: 80%;
+	text-align: center;
+	background-position: center;
+	position: fixed;
+	margin: auto;
+	top: 0;
+	right:10px;
+  	background-image: url("emailbox.gif");
+    background-repeat:no-repeat;
+    overflow: hidden;
+    outline:none;
+    -webkit-filter: drop-shadow(0px 0px 8px Hotpink);
+}
+
+.emailbox:hover {
+	-webkit-filter: drop-shadow(0px 0px 8px #f900b7);
+	
+}
+/*.video-container {*/
+/*	border: 2px green solid;*/
+/*    position: relative;*/
+/*    padding-bottom: 2%;*/
+/*    padding-top: 0px;*/
+/*    height: 100%;*/
+    /*width:50%;*/
+/*    overflow: hidden;*/
+/*}*/
+
+/*.video-container iframe,*/
+/*.video-container object,*/
+/*.video-container embed {*/
+
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    left: 0;*/
     
-}    
+/*}    */
 /*video {*/
 /*    height: auto;*/
 /*    min-height:100%;*/
@@ -223,28 +295,10 @@ body, html {
   	
 /*}*/
 
-/*.slideshow {*/
-/*    z-index: -5;*/
-/*}*/
 
-/*.border {*/
-/*    z-index: 100;*/
-/*    position: fixed;*/
-	/*border: 3px hotpink solid;*/
-/*	width: 100%;*/
-/*	height: 100%;*/
-     /*background-attachment: fixed;*/
-/*	background-image: url(gold4.png);*/
-/*	background-repeat: no-repeat;*/
-/*	-webkit-background-size: cover;*/
-/*  	-moz-background-size: cover;*/
-/*  	-o-background-size: cover;*/
-/*  	background-size: 100% 100%;*/
-/*  	text-decoration: none; */
-/*    decoration: none; */
-    
-/*}*/
+
 .console-controls {
+	z-index: 600;
 	position: absolute;
 	background-color: pink;
 	right: 15%;
@@ -508,17 +562,3 @@ a:hover {
 }
 
 
-/*.backgroundone{*/
-/*    display: none;*/
-/*    z-index: -1;*/
-/*    width: 50vw;*/
-/*    height: 50vh;*/
-/*    position: relative;*/
-/*	background-image: url(waterfall4.gif);*/
-/*	background-repeat: no-repeat;*/
-/*	-webkit-background-size: cover;*/
-/*  	-moz-background-size: cover;*/
-/*  	-o-background-size: cover;*/
-/*  	background-size: 100% 100%;*/
-    
-/*}*/
