--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
 	margin: auto;
 	overflow: hidden;
+	/*margin-bottom: 50px;*/
 }
 
 body, html {
@@ -54,7 +55,7 @@ max-width: 560px;
   position: absolute;
   width: 35%;
   height: 35%;
-
+background-color: black;
 border-WIDTH: 7;
     border-style: ridge;
     border-color: #FF00FF;
@@ -139,17 +140,17 @@ border-WIDTH: 7;
 	/*justify-content: space-between;*/
 	/*background-color: pink;*/
 
-	/*height: 11%;*/
+	height: 12%;
 	/*margin:0 auto;*/
  /*   clear:left;*/
  /*   height:auto;*/
  /*   z-index: 0;*/
-    text-align:center;
+    text-align: center;
     position: absolute;
     margin: auto;
     top: 3%;
     right: 0;
-    bottom: 0;
+
     left: 0;
  /*	width: 20%;*/
 	/*z-index: 200;*/
@@ -307,6 +308,7 @@ border-WIDTH: 7;
 	height: 80%;
 	text-decoration: none; 
     decoration: none; 
+    
 }
 
 a {
@@ -429,36 +431,39 @@ a:hover {
 /*     left: 0;*/
 /*}*/
 
-.console-hands {
-    z-index: 200;
-	position: absolute;
-	 margin: auto;
-     top: 0;
-     right: 0;
-     bottom: 0;
-     left: 0;
+/*.console-hands {*/
+	
+/*    z-index: 200;*/
+/*	position: absolute;*/
+/*	 margin: auto;*/
+/*     top: 0;*/
+/*     right: 0;*/
+/*     bottom: 0;*/
+/*     left: 0;*/
   
-    height: 150px;
-	/*border: 1px black solid;*/
+    /*height: 150px;*/
+/*	border: 1px black solid;*/
 
-}
+/*}*/
 
 
 .console-row {
     z-index: 100;
-    position: fixed;
+ 	position: fixed;
      margin: auto;
-     top: 1;
+     
      right: 0;
+     padding-bottom: 0px;
      bottom: 0;
-     left: 0;
+     /*left: 0;*/
 	display: flex;
 	justify-content: space-between;
 	/*border: 1px yellow solid;*/
 	/*background-color: pink;*/
 	width: 100%;
-	height: 28%;
+	/*height: 28%;*/
 	background-position: center;
+	text-align: center;
 }
 
 .console-back{
@@ -473,14 +478,14 @@ a:hover {
 	left: 0;
 	bottom: 0;
 	right:0;
-	top: 0;
-	width: 10%;
+
+	
 	
 	background-image: url(diamondback.gif);
 	/*border: 1px solid black;*/
-	background-size: 70%;
+	background-size: 40%;
 	background-repeat: no-repeat;
-	background-position: contain;
+	background-position: center;
 	/*background-color: blue;*/
 	-webkit-filter: drop-shadow(0px 0px 8px hotpink);
 	-webkit-transition: background-size 0.2s;
@@ -499,7 +504,11 @@ a:hover {
       1px -1px 0 #000,
       -1px 1px 0 #000,
        1px 1px 0 #000;
-        height: 50%;
+        height: 95px;
+        width: 20%;
+        vertical-align: middle;
+	display: table-cell;
+	line-height: 90px; 
   /*line-height: 90px;*/
 
 }
@@ -509,7 +518,7 @@ a:hover {
     filter: saturate(20);
     cursor: pointer;
     z-index: 999999999;
-    background-size: 65%;
+    background-size: 30%;
     background-image: url(diamondback.gif);
     -webkit-filter: drop-shadow(0px 0px 10px #ff00a5), saturate;
    /* -webkit-filter: drop-shadow(6px 6px 6px hotpink);*/
@@ -517,19 +526,21 @@ a:hover {
 }
 
 .console-forward{
-    z-index: 10;
+    z-index: 100;
+
     margin: auto;
     left:0;
 	bottom: 0;
-    margin-left: 86%;
-	top: 0;
-	width: 10%;
-	height: 50%;
+	right: 0;
+    margin-left: 69%;
+
+	width: 20%;
+	height: 95px;
 	background-image: url(diamond.gif);
 	/*border: 1px solid black;*/
-	background-size: 70%;
+	background-size: 40%;
 	background-repeat: no-repeat;
-	background-position: contain;
+	background-position: center;
 	/*background-color: grey;*/
 	-webkit-filter: drop-shadow(0px 0px 8px hotpink);
 	-webkit-transition: background-size 0.2s;
@@ -548,13 +559,17 @@ a:hover {
 	font-weight: bolder;
 	font-style: oblique;
 	color: hotpink;
+	vertical-align: middle;
+	/*display: table-cell;*/
+	line-height: 90px; 
 
 }
 
 .console-forward:hover {
+	z-index: 999;
     cursor: pointer ;
     background-image: url(diamond.gif);
-    background-size: 65%;
+    background-size: 30%;
     filter: saturate(20);
      -webkit-filter: drop-shadow(0px 0px 10px #ff00a5), saturate;
 	/*-webkit-filter: drop-shadow(6px 6px 6px hotpink);*/
