--- a/style.css
+++ b/style.css
@@ -461,7 +461,7 @@ a:hover {
 	/*border: 1px yellow solid;*/
 	/*background-color: pink;*/
 	width: 100%;
-	/*height: 28%;*/
+	height: 150px;
 	background-position: center;
 	text-align: center;
 }
@@ -476,7 +476,7 @@ a:hover {
     z-index: 999999999;
     margin: auto;
 	left: 0;
-	bottom: 0;
+	bottom: 3%;
 	right:0;
 
 	
@@ -504,7 +504,7 @@ a:hover {
       1px -1px 0 #000,
       -1px 1px 0 #000,
        1px 1px 0 #000;
-        height: 95px;
+        height: 100%;
         width: 20%;
         vertical-align: middle;
 	display: table-cell;
@@ -530,12 +530,12 @@ a:hover {
 
     margin: auto;
     left:0;
-	bottom: 0;
+	bottom: 3%;
 	right: 0;
     margin-left: 69%;
 
 	width: 20%;
-	height: 95px;
+	height: 100%;
 	background-image: url(diamond.gif);
 	/*border: 1px solid black;*/
 	background-size: 40%;
