--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ border: 6px;
     border-style: ridge ;
     border-color: #FF00FF;
     filter: progid:DXImageTransform.Microsoft.Shadow(color=yellow, direction=135, strength=14);
-    /*box-shadow: 9px 9px 14px yellow;*/
+
      border-radius: 25px;
     
 }
@@ -105,8 +105,11 @@ border: 6px;
   height: 100%;
    overflow: hidden;
     border-radius: 25px;
-  /*left: 0; top: 0;*/
+  left: 0; top: 0;
 }
+
+
+
 
 #emailbox {
 	/*border: 1px solid red;*/
@@ -555,7 +558,7 @@ a:hover {
 	background-repeat: no-repeat;
 	background-position: center;
 	/*background-color: blue;*/
-	-webkit-filter: drop-shadow(0px 0px 8px black);
+	-webkit-filter: drop-shadow(0px 0px 8px blac);
 	-webkit-transition: background-size 0.2s;
 	text-align: center;
 	font-size: 150%;
