--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body, html {
 	position: relative;
 }
 
+
+
 /*.console {*/
 /*	z-index: 200;*/
 	/*background-color: green;*/
@@ -60,7 +62,9 @@ max-width: 560px;
      right: 0;
      bottom: 0;
      left: 0;
-     background-color: limegreen;
+     display: inline-block;
+
+
      /*background-image: repeating-radial-gradient(BLACK, #FF00FF 10%, RED 15%);*/
    background-image: linear-gradient(90deg, #FF00FF, BLUE);
    background-image: linear-gradient( PINK 1% , #FF00FF, #cc0c9c, #ad0c85, #701ea0, BLUE 110%);
@@ -160,37 +164,20 @@ border: 6px;
 /*    min-width: 100%;*/
 /*}*/
 
+
+
+
 .player{
-	
-	/*border: blue 3px solid;*/
-	 z-index: 100;
- 
-    /*background-color: yellow;*/
-    /*margin: auto;*/
-
- 
-   
-	/*display: flex;*/
-	/*justify-content: space-between;*/
-	/*background-color: pink;*/
-
-	height: 12%;
-	/*margin:0 auto;*/
- /*   clear:left;*/
- /*   height:auto;*/
- /*   z-index: 0;*/
-    text-align: center;
-    position: absolute;
-    margin: auto;
-    top: 3%;
-    right: 0;
-
+	margin: auto;
+	position: absolute;
+    top: 4%;
     left: 0;
- /*	width: 20%;*/
-	/*z-index: 200;*/
-	/*position: absolute;*/
-	/*background-color: limegreen;*/
+    right: 0;
+    width: 80%;
+    /*height: 10%;*/
+   	text-align: center;
 }
+
 
 /*#play {*/
 /*	padding-left: 20px;*/
@@ -237,12 +224,13 @@ border: 6px;
 
 	cursor: pointer;
 	left: 40%;
-	bottom: 10%;
-	width: 200%;
-	height: 10%;
+	bottom: 5%;
+	width: 150%;
+
+	
 	/*background-image: url(starframe.png);*/
 	/*border: 1px solid black;*/
-	background-size: 40% 100%;
+	background-size: 40% 90%;
 	background-repeat: no-repeat;
 	background-position: center;
 	-webkit-filter: drop-shadow(0px 2px 2px black);
@@ -270,9 +258,7 @@ border: 6px;
 	/*right:0;*/
 	/*top: 0;*/
 	margin: auto;
-	font-family: cursive;
-	font-weight: bolder;
-	font-size: 200%;
+
 	/*position: relative;*/
 	z-index: 200;
 	-webkit-filter: drop-shadow(0px 2px 2px black);
@@ -298,15 +284,12 @@ border: 6px;
 	/*right:0;*/
 	/*top: 0;*/
 	margin: auto;
-	font-family: cursive;
-	font-weight: bolder;
-	font-size: 200%;
+
 	/*position: relative;*/
 	z-index: 200;
 	/*background-color: hotpink;*/
 	/*border: 1.5px yellow solid;*/
-	text-decoration: none; 
-    decoration: none; 
+
     -webkit-filter: drop-shadow(0px 2px 2px black);
 	-webkit-transition: width 0.3s, height 0.3s, background-size 0.3s;
 	
@@ -318,7 +301,7 @@ border: 6px;
 }
 
 #prev {
-	width: 100%;
+
 	/*padding-left: 5px;*/
 	/*padding-right: 5px;*/
 	/*height: 100%;*/
@@ -328,9 +311,7 @@ border: 6px;
 	/*right:0;*/
 	/*top: 0;*/
 	margin: auto;
-	font-family: cursive;
-	font-weight: bolder;
-	font-size: 200%;
+
 	/*position: relative;*/
 	z-index: 200;
 	/*background-color: hotpink;*/
